--- a/requirements.txt
+++ b/requirements.txt
@@ -2,28 +2,24 @@
 # Optimized for Streamlit Cloud deployment
 
 # Core data processing
-pandas>=2.0.0
-numpy>=1.24.0
+pandas
+numpy
 
-# Geospatial data handling (specific versions for Streamlit Cloud compatibility)
-geopandas>=0.14.0
-shapely>=2.0.0
-pyproj>=3.5.0
-fiona>=1.9.0
+# Geospatial - use versions that don't require GDAL compilation
+geopandas
+shapely
+pyproj
 
 # Web application framework
-streamlit>=1.28.0
+streamlit
 
 # Visualization
-folium>=0.15.0
-streamlit-folium>=0.15.0
-plotly>=5.17.0
+folium
+streamlit-folium
+plotly
 
 # Data download and HTTP requests
-requests>=2.31.0
+requests
 
 # Excel file reading
-openpyxl>=3.1.0
-
-# Utilities
-python-dotenv>=1.0.0
+openpyxl
